# OpenCV_CMake_Basic_Example

./: CMakeLists.txt  DisplayImage.cpp  backup.txt
